nobase_include_HEADERS =                   		\
	getfem_boost/workaround.hpp        		\
	getfem_boost/intrusive_ptr.hpp     		\
	getfem_boost/noncopyable.hpp       		\
	gmm/gmm.h                          		\
	gmm/gmm_matrix.h                   		\
	gmm/gmm_iter_solvers.h             		\
	gmm/gmm_iter.h                     		\
	gmm/gmm_inoutput.h                 		\
	gmm/gmm_vector.h                   		\
	gmm/gmm_transposed.h               		\
	gmm/gmm_scaled.h                   		\
	gmm/gmm_conjugated.h               		\
	gmm/gmm_real_part.h                		\
	gmm/gmm_def.h                      		\
	gmm/gmm_sub_index.h                		\
	gmm/gmm_vector_to_matrix.h         		\
	gmm/gmm_sub_vector.h               		\
	gmm/gmm_sub_matrix.h               		\
	gmm/gmm_interface.h                		\
	gmm/gmm_kernel.h                   		\
	gmm/gmm_interface_bgeot.h          		\
	gmm/gmm_solver_cg.h                		\
	gmm/gmm_solver_constrained_cg.h    		\
	gmm/gmm_modified_gram_schmidt.h    		\
	gmm/gmm_dense_Householder.h        		\
	gmm/gmm_dense_lu.h                 		\
	gmm/gmm_dense_matrix_functions.h                \
	gmm/gmm_dense_qr.h                 		\
	gmm/gmm_dense_sylvester.h         		\
	gmm/gmm_tri_solve.h                		\
	gmm/gmm_solver_gmres.h             		\
	gmm/gmm_solver_idgmres.h           		\
	gmm/gmm_solver_qmr.h               		\
	gmm/gmm_solver_bicgstab.h          		\
	gmm/gmm_solver_Schwarz_additive.h  		\
	gmm/gmm_solver_bfgs.h              		\
	gmm/gmm_domain_decomp.h            		\
	gmm/gmm_superlu_interface.h        		\
	gmm/gmm_precond.h                  		\
	gmm/gmm_precond_ildlt.h            		\
	gmm/gmm_precond_ildltt.h           		\
	gmm/gmm_precond_mr_approx_inverse.h		\
	gmm/gmm_precond_diagonal.h         		\
	gmm/gmm_precond_ilu.h              		\
	gmm/gmm_precond_ilut.h             		\
	gmm/gmm_precond_ilutp.h            		\
	gmm/gmm_blas.h                     		\
	gmm/gmm_blas_interface.h           		\
	gmm/gmm_lapack_interface.h         		\
	gmm/gmm_condition_number.h         		\
	gmm/gmm_least_squares_cg.h         		\
	gmm/gmm_range_basis.h         			\
	gmm/gmm_opt.h                      		\
	gmm/gmm_algobase.h                 		\
	gmm/gmm_ref.h                      		\
	gmm/gmm_std.h                      		\
	gmm/gmm_except.h                   		\
	gmm/gmm_MUMPS_interface.h          		\
	getfem/dal_config.h		   		\
	getfem/dal_singleton.h		   		\
	getfem/dal_shared_ptr.h            		\
	getfem/dal_basic.h                 		\
	getfem/dal_bit_vector.h            		\
	getfem/dal_static_stored_objects.h 		\
	getfem/dal_naming_system.h         		\
	getfem/dal_backtrace.h		   		\
	getfem/dal_tas.h                   		\
	getfem/dal_tree_sorted.h           		\
	getfem/bgeot_config.h              		\
	getfem/bgeot_imbricated_box.h	   		\
	getfem/bgeot_permutations.h        		\
	getfem/bgeot_convex_structure.h    		\
	getfem/bgeot_convex.h              		\
	getfem/bgeot_convex_ref.h          		\
	getfem/bgeot_poly.h                		\
	getfem/bgeot_geometric_trans.h     		\
	getfem/bgeot_geotrans_inv.h        		\
	getfem/bgeot_kdtree.h		   		\
	getfem/bgeot_mesh_structure.h      		\
	getfem/bgeot_mesh.h                		\
	getfem/bgeot_poly_composite.h      		\
	getfem/bgeot_rtree.h		   		\
	getfem/bgeot_node_tab.h		   		\
	getfem/bgeot_small_vector.h        		\
	getfem/bgeot_sparse_tensors.h      		\
	getfem/bgeot_tensor.h              		\
	getfem/bgeot_vector.h              		\
	getfem/bgeot_comma_init.h	   		\
	getfem/bgeot_ftool.h               		\
	getfem/getfem_arch_config.h        		\
	getfem/getfem_integration.h        		\
	getfem/getfem_assembling.h         		\
	getfem/getfem_assembling_tensors.h 		\
	getfem/getfem_generic_assembly.h 		\
	getfem/getfem_context.h 			\
	getfem/getfem_external_data_fem.h  		\
	getfem/getfem_config.h             		\
	getfem/getfem_interpolation.h      		\
	getfem/getfem_export.h             		\
	getfem/getfem_import.h	           		\
	getfem/getfem_derivatives.h        		\
	getfem/getfem_fem.h                		\
	getfem/getfem_interpolated_fem.h   		\
	getfem/getfem_projected_fem.h   		\
	getfem/getfem_mesh_fem_global_function.h	\
	getfem/getfem_mesh_fem_sum.h            	\
	getfem/getfem_gauss_lobatto_fem_coef.h  	\
	getfem/getfem_Xfem.h                    	\
	getfem/getfem_spider_fem.h              	\
	getfem/getfem_im_list.h                 	\
	getfem/getfem_mat_elem.h                	\
	getfem/getfem_mat_elem_type.h           	\
	getfem/getfem_mesh.h                    	\
	getfem/getfem_mesh_region.h             	\
	getfem/getfem_mesh_fem.h                	\
	getfem/getfem_mesh_im.h                 	\
	getfem/getfem_error_estimate.h          	\
	getfem/getfem_inter_element.h           	\
	getfem/getfem_level_set.h	        	\
	getfem/getfem_partial_mesh_fem.h		\
	getfem/getfem_torus.h                   	\
	getfem/getfem_mesh_level_set.h          	\
	getfem/getfem_mesh_im_level_set.h         	\
	getfem/getfem_crack_sif.h        	   	\
	getfem/getfem_mesh_fem_level_set.h	   	\
	getfem/getfem_mesh_fem_product.h	   	\
	getfem/getfem_fem_level_set.h             	\
	getfem/getfem_mesh_slicers.h	           	\
	getfem/getfem_mesh_slice.h	           	\
	getfem/getfem_norm.h         	           	\
	getfem/getfem_regular_meshes.h            	\
	getfem/getfem_modeling.h                  	\
	getfem/getfem_models.h                  	\
	getfem/getfem_model_solvers.h             	\
	getfem/getfem_linearized_plates.h         	\
	getfem/getfem_contact_and_friction_common.h	\
	getfem/getfem_contact_and_friction_large_sliding.h \
	getfem/getfem_contact_and_friction_nodal.h	\
	getfem/getfem_contact_and_friction_integral.h	\
	getfem/getfem_Coulomb_friction.h          	\
	getfem/getfem_nonlinear_elasticity.h      	\
	getfem/getfem_fourth_order.h              	\
	getfem/getfem_Navier_Stokes.h             	\
	getfem/getfem_superlu.h		   		\
	getfem/getfem_plasticity.h                	\
	getfem/getfem_omp.h                             \
	getfem/getfem_continuation.h                    \
	getfem/getfem_mesher.h                          \
	getfem/getfem_convect.h                    	\
	getfem/getfem_deformable_mesh.h                 \
	getfem/getfem_level_set_contact.h               \
	getfem/getfem_im_data.h

SRC =                                      		\
	dal_backtrace.cc                   		\
	dal_bit_vector.cc                  		\
	dal_singleton.cc		   		\
	dal_static_stored_objects.cc       		\
	bgeot_convex_structure.cc          		\
	bgeot_convex_ref_simplexified.cc   		\
	bgeot_convex_ref.cc                		\
	bgeot_geometric_trans.cc           		\
	bgeot_geotrans_inv.cc              		\
	bgeot_imbricated_box.cc            		\
	bgeot_kdtree.cc		           		\
	bgeot_mesh_structure.cc            		\
	bgeot_rtree.cc		           		\
	bgeot_node_tab.cc		          	\
	bgeot_small_vector.cc              		\
	bgeot_sparse_tensors.cc            		\
	bgeot_poly.cc                      		\
	bgeot_poly_composite.cc            		\
	bgeot_ftool.cc                     		\
	getfem_superlu.cc		   		\
	getfem_mesh.cc                     		\
	getfem_mesh_region.cc              		\
	getfem_context.cc                 		\
	getfem_mesh_fem.cc                 		\
	getfem_mesh_im.cc                  		\
	getfem_integration.cc              		\
	getfem_integration_composite.cc    		\
	getfem_fem.cc                      		\
	getfem_interpolated_fem.cc         		\
	getfem_projected_fem.cc         		\
	getfem_mesh_fem_global_function.cc 		\
	getfem_Xfem.cc                     		\
	getfem_fem_composite.cc            		\
	getfem_mat_elem.cc                 		\
	getfem_mat_elem_type.cc            		\
	getfem_inter_element.cc           		\
	getfem_level_set.cc	           		\
	getfem_mesh_level_set.cc           		\
	getfem_mesh_im_level_set.cc        		\
	getfem_mesh_fem_level_set.cc       		\
	getfem_mesh_fem_product.cc         		\
	getfem_mesh_fem_sum.cc             		\
	getfem_fem_level_set.cc            		\
	getfem_partial_mesh_fem.cc         		\
	getfem_torus.cc  	         		\
	getfem_mesh_slicers.cc	           		\
	getfem_mesh_slice.cc	           		\
	getfem_regular_meshes.cc           		\
	getfem_import.cc	           		\
	getfem_interpolation.cc            		\
	getfem_error_estimate.cc            		\
	getfem_export.cc                   		\
	getfem_assembling_tensors.cc       		\
	getfem_generic_assembly.cc       		\
	getfem_mesher.cc		   		\
	getfem_modeling.cc                 		\
	getfem_models.cc                 		\
	getfem_model_solvers.cc                		\
	getfem_fourth_order.cc                		\
	getfem_nonlinear_elasticity.cc                  \
	getfem_contact_and_friction_common.cc		\
	getfem_contact_and_friction_nodal.cc		\
	getfem_contact_and_friction_integral.cc	        \
	getfem_contact_and_friction_large_sliding.cc    \
	getfem_plasticity.cc				\
	getfem_omp.cc                       		\
	getfem_level_set_contact.cc         		\
	getfem_im_data.cc                   		\
	getfem_continuation.cc
#	getfem_enumeration_dof_para.cc

lib_LTLIBRARIES = libgetfem.la
libgetfem_la_SOURCES = $(SRC)
libgetfem_la_LDFLAGS = ${LIBTOOL_VERSION_INFO}
libgetfem_la_LIBADD = @SUPERLU_LIBS@ @MUMPS_LIBS@ @BOOST_LIBS@
AM_CPPFLAGS = -I$(top_srcdir)/src -I../src -I$(top_srcdir)

CLEANFILES = ii_files/* *.o.d
DISTCLEANFILES = getfem/getfem_im_list.h getfem/getfem_arch_config.h

